# iceberg

./: .gitignore  .gitleaks.toml  ICEBERG-bag-engineering.md  ICEBERG-conops.md  ICEBERG-demand.md  ICEBERG-pitch.md  LICENSE  README.md  REQUIREMENTS-L1.md  REQUIREMENTS.md  RISKS.md  TRADE-end-of-mission-conops.md  generate_conops_plots.py  saturn-water-isru-sketch.md  saturn_isru_boe.py  saturn_rendezvous_sim.py
water-prop/: .gitignore  HYPOTHESES.md  PROTOCOL.md  README.md  RISKS.md  RUNNING_DOC.md  pyproject.toml
water-prop/docs/: ARCHITECTURE-DECISION-MATRIX.md  CHUNK-MASS-RANGE.md  R1-landscape.md  R2-deepdive.md  candidates.md  derivation-thermal-isp-ceilings.md
water-prop/rounds/: README.md
water-prop/rounds/R0_microwave_electrothermal_frozen_flow/: STUDY.md  run.py
water-prop/rounds/R10_inbound_propulsion_revisit/: STUDY.md  run.py
water-prop/rounds/R10b_thruster_per_power_class/: STUDY.md  run.py
water-prop/rounds/R11_grid_life_silicate_contamination/: STUDY.md  run.py
water-prop/rounds/R12_lunar_GA_both_legs/: STUDY.md  run.py
water-prop/rounds/R13_dual_ion_architecture/: STUDY.md  run.py
water-prop/rounds/R14_conops_reactor_chunk_reconcile/: STUDY.md  run.py
water-prop/rounds/R15_fleet_ramp_breakeven/: STUDY.md  run.py
water-prop/rounds/R15_rerun_audited/: STUDY.md  run.py
water-prop/rounds/R15b_pricing_sovereign_sensitivity/: STUDY.md  run.py
water-prop/scripts/: audit-call-conventions.py  audit_carveouts.py  plot_closure_matrix.py
water-prop/tests/: test_nozzle.py
water-prop/vehicle/: SATURN-SHIP-SPEC.md
(+934 files in other folders)
